src/test/deca/context/invalid/class/invalid_var_void.deca
// Description:
//    Test of a declaration variable of type void in a method
//    Test rule 3.17
//
// Result:
// [Begin Result]
//invalid_var_void.deca:16:13: Variable type cannot be void. Rule 3.17.
// [End Result]
//
// History:
//    created on 12/01/2025


class MyClass {
    int myMethod(){
        void a;
    }
}

{
    //empty main
}
